# lexicase

./: .gitignore  LICENSE  MANIFEST.in  README.md  lexicase_demo.ipynb  performance_comparison.ipynb  pyproject.toml
baselines/: __init__.py  baselines.py  tournament.py
lexicase/: __init__.py  backend.py  base.py  dispatch.py  downsample.py  epsilon.py  jax_impl.py  jax_impl_simple.py  numpy_impl.py  utils.py
tests/: __init__.py  test_base.py  test_downsample.py  test_elitism.py  test_epsilon.py  test_jit_dispatch.py
