[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lexicase"
version = "0.1.1"
description = "Fast, vectorized lexicase selection in NumPy and JAX"
readme = "README.md"
authors = [{name = "Ryan Bahlous-Boldi", email = "your.email@example.com"}]
license = "MIT"
requires-python = ">=3.8"
keywords = ["evolutionary-computation", "genetic-algorithms", "selection", "lexicase"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ryanboldi/lexicase"
Repository = "https://github.com/ryanboldi/lexicase"
Issues = "https://github.com/ryanboldi/lexicase/issues"

[project.optional-dependencies]
jax = ["jax", "jaxlib"]
numpy = ["numpy"]
dev = ["pytest", "pytest-cov"]
all = ["jax", "jaxlib", "numpy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lexicase*"] 